src/assets/styles.css
/* ... */
.hover\:border-b:hover {
  border-bottom-width: 1px;
}
@media (min-width: 370px) {
  @media not all and (min-width: 1024px) {
    .sm\:max-lg\:justify-center {
      justify-content: center;
    }
  }
  @media not all and (min-width: 768px) {
    .sm\:max-md\:my-3 {
      margin-top: 0.75rem;
      margin-bottom: 0.75rem;
    }
    .sm\:max-md\:px-10 {
      padding-left: 2.5rem;
      padding-right: 2.5rem;
    }
  }
}
@media (min-width: 768px) {
  .md\:flex {
    display: flex;
  }
  .md\:justify-center {
    justify-content: center;
  }
  .md\:px-0 {
    padding-left: 0px;
    padding-right: 0px;
  }
  .md\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }
}
@media (min-width: 1024px) {
  .lg\:-bottom-20 {
    bottom: -5rem;
  }
  .lg\:-bottom-28 {
    bottom: -7rem;
  }
  .lg\:-left-16 {
    left: -4rem;
  }
  .lg\:-right-10 {
    right: -2.5rem;
  }
  .lg\:-top-20 {
    top: -5rem;
  }
  .lg\:left-24 {
    left: 6rem;
  }
  .lg\:left-40 {
    left: 10rem;
  }
  .lg\:left-72 {
    left: 18rem;
  }
  .lg\:left-80 {
    left: 20rem;
  }
  .lg\:top-80 {
    top: 20rem;
  }
  .lg\:order-1 {
    order: 1;
  }
  .lg\:mb-0 {
    margin-bottom: 0px;
  }
  .lg\:block {
    display: block;
  }
  .lg\:flex {
    display: flex;
  }
  .lg\:hidden {
    display: none;
  }
  .lg\:aspect-\[5\/7\] {
    aspect-ratio: 5/7;
  }
  .lg\:w-1\/2 {
    width: 50%;
  }
  .lg\:w-full {
    width: 100%;
  }
  .lg\:max-w-none {
    max-width: none;
  }
  .lg\:justify-start {
    justify-content: flex-start;
  }
  .lg\:justify-end {
    justify-content: flex-end;
  }
  .lg\:justify-between {
    justify-content: space-between;
  }
  .lg\:bg-transparent {
    background-color: transparent;
  }
  .lg\:p-0 {
    padding: 0px;
  }
  .lg\:py-0 {
    padding-top: 0px;
    padding-bottom: 0px;
  }
  .lg\:py-20 {
    padding-top: 5rem;
    padding-bottom: 5rem;
  }
  .lg\:pr-20 {
    padding-right: 5rem;
  }
  .lg\:pt-16 {
    padding-top: 4rem;
  }
  .lg\:text-left {
    text-align: left;
  }
  .lg\:text-5xl {
    font-size: 3rem;
    line-height: 1;
  }
  .lg\:leading-tight {
    line-height: 1.25;
  }
  .lg\:text-gray-400 {
    --tw-text-opacity: 1;
    color: rgb(148 163 184 / var(--tw-text-opacity));
  }
}

